--- a/estilo-cvonline.css
+++ b/estilo-cvonline.css
@@ -14,10 +14,12 @@ html, body{
 #foto{
     display: inline-block;
     border-radius: 50%;
+    margin: 0.2em;
 }
 .seccionizq{
     display: inline-block;
     width: 30%;
+    min-width: min-content;
     border: 0;
     margin: 0;
     vertical-align: top;
@@ -30,6 +32,13 @@ html, body{
 }
 .seccionizq h2{
     text-align: center;
+}
+.seccionizq h3{
+    font-size: smaller;
+    margin: 0.1em;
+}
+.linkedin{
+    font-size: 0.5em;
 }
 .menu ul li{
     background-color: #2e518b;
@@ -94,6 +103,7 @@ html, body{
 }
 .fecha{
     font-style: oblique;
+    min-width: min-content;
     width: 20%;
     align-self: center;
 }
